--- a/src/components/Navigation/Navigation.module.css
+++ b/src/components/Navigation/Navigation.module.css
@@ -1,7 +1,7 @@
 .navBrand {
   margin-bottom: 0px;
   margin-right: 0px;
-  text-transform: uppercase;
+  /* text-transform: uppercase; */
   text-align: center;
   font-size: 20px;
   letter-spacing: 1px;
