--- a/src/index.css
+++ b/src/index.css
@@ -1,19 +1,358 @@
+@font-face {
+  font-family: 'Header Font';
+  src: url('./assets/fonts/Font-Medium.woff2');
+}
+
+@font-face {
+  font-family: 'Text Font';
+  src: url('./assets/fonts/TextFont-Regular.woff2');
+}
+
+@font-face {
+  font-family: 'Text Font';
+  src: url('./assets/fonts/TextFont-Medium.woff2');
+  font-weight: bold;
+}
+
 body {
   margin: 0;
-  font-family: "Open Sans", -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
+  font-family: 'Text Font', 'Open Sans', -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto',
+    'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  font-family: 'Header Font', 'Open Sans', -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto',
+    'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
+}
+
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
-    monospace;
+  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New', monospace;
 }
 
 @media (min-width: 1200px) {
-  .container{
-      max-width: 970px;
+  .container {
+    max-width: 970px;
   }
+}
+
+/* FLOW BUILDER STYLES */
+
+.app {
+  flex: 2;
+  width: 360px;
+  height: 712px;
+  max-width: 360px;
+  max-height: 712px;
+  overflow-y: scroll;
+  -webkit-overflow-scrolling: 'touch';
+  border: 20px solid black;
+  border-radius: 48px;
+  padding: 40px 16px;
+}
+
+.edit {
+  flex: 1;
+  padding: 0 16px;
+}
+
+.appTitle {
+  background-color: #3cb371;
+  color: white;
+  text-transform: uppercase;
+  border-radius: 4px;
+  margin: 4px 16px;
+  font-weight: 600;
+  letter-spacing: 3px;
+}
+
+.addRow {
+  display: flex;
+  flex-direction: row;
+  width: 100%;
+}
+
+.addRow > div {
+  flex: 1;
+}
+
+.Dropdown-control {
+  border: 1px solid #80868b;
+  height: 48px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 4px;
+}
+
+.Dropdown-arrow {
+  top: 20px;
+}
+
+.addRowButton {
+  padding: 8px;
+  text-align: center;
+  margin-right: 16px;
+  border: 1px solid #80868b;
+  background-color: white;
+  cursor: pointer;
+  border-radius: 4px;
+  transition: all 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1), cubic-bezier(0.4, 0, 0.2, 1);
+  transition-property: background-color;
+  height: 48px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  box-sizing: border-box;
+  margin-bottom: 8px;
+}
+
+.addRowButton:hover {
+  background-color: #d3d3d3;
+}
+
+.danger {
+  border: 1px solid #d2322e;
+  color: white;
+  background-color: #d95350;
+}
+
+.danger:hover {
+  background-color: #d5433f;
+}
+
+.standaloneButton {
+  margin: 0;
+  margin-top: 8px;
+  margin-bottom: 8px;
+}
+
+.prettyForm {
+  position: relative;
+}
+
+.prettyForm > div {
+  position: relative;
+}
+
+.invalidColorInput {
+  color: firebrick;
+}
+
+.prettyForm input,
+.prettyForm textarea {
+  box-flex: 1;
+  flex-shrink: 1;
+  background-color: transparent;
+  border: none;
+  display: block;
+  font: 400 16px 'PT Sans', sans-serif;
+  height: 48px;
+  padding: 13px 15px;
+  line-height: 24px;
+  margin: 0;
+  min-width: 0%;
+  outline: none;
+  z-index: 0;
+  border-radius: 4px;
+  border: 1px solid #80868b;
+  font-size: 16px;
+  box-sizing: border-box;
+  margin: 16px 0;
+  width: 100%;
+  position: relative;
+  z-index: 2;
+  transition: all 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1), cubic-bezier(0.4, 0, 0.2, 1);
+  transition-property: border-color;
+  max-width: 100%;
+  resize: vertical;
+}
+
+.prettyForm textarea {
+  min-height: 240px;
+}
+
+.prettyForm label {
+  display: inline-block;
+  transition: all 150ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1), cubic-bezier(0.4, 0, 0.2, 1);
+  transition-property: transform color left;
+  background-color: white;
+  font-size: 16px;
+  color: #80868b;
+  padding: 0 8px;
+  top: 12px;
+  left: 8px;
+  position: absolute;
+  z-index: 1;
+  overflow: hidden;
+}
+
+.prettyForm input:focus ~ label,
+.prettyForm input.hasText ~ label,
+.prettyForm textarea:focus ~ label,
+.prettyForm textarea.hasText ~ label,
+.prettyForm .RichEditor-root ~ label,
+.prettyForm label.upper {
+  transform: scale(0.75); /* translateY(-34px); */
+  top: -10px;
+  left: 4px;
+  z-index: 3;
+}
+
+.prettyForm label.upper {
+  left: -8px;
+}
+
+.prettyForm input:focus ~ label,
+.prettyForm textarea:focus ~ label,
+.prettyForm .RichEditor-root:focus-within ~ label {
+  color: rgb(25, 115, 232);
+}
+
+.prettyForm input:focus,
+.prettyForm textarea:focus {
+  color: black;
+  border-color: rgb(25, 115, 232);
+  border-width: 2px;
+  padding-left: 14px;
+}
+
+.prettyForm button {
+  width: 100%;
+  height: 48px;
+  color: white;
+  background-color: rgb(25, 115, 232);
+  border: 1px solid rgb(25, 115, 232);
+  border-radius: 4px;
+  transition: all 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1), cubic-bezier(0.4, 0, 0.2, 1);
+  transition-property: background-color;
+  cursor: pointer;
+}
+
+.prettyForm button:hover {
+  background-color: rgb(38, 123, 229);
+  /* border: 1px solid rgb(38, 123, 229); */
+}
+
+.sectionTitle,
+.componentSection {
+  background-color: white;
+  border-radius: 4px;
+  transition: all 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1), cubic-bezier(0.4, 0, 0.2, 1);
+  transition-property: background-color;
+  cursor: pointer;
+  padding: 4px 0;
+  margin-left: -8px;
+  margin-right: -8px;
+}
+
+.sectionTitle.active,
+.componentSection.active {
+  background-color: #e2e2e2;
+}
+
+.sectionTitle:hover,
+.componentSection:hover {
+  background-color: #d3d3d3;
+}
+
+.componentSection {
+  padding: 8px;
+  margin-bottom: 8px;
+  user-select: none;
+}
+
+.componentSection * {
+  user-select: none;
+}
+
+.componentSection input {
+  width: 100%;
+  outline: none;
+  background: transparent;
+  border: 1px solid transparent;
+  border-bottom-color: lightgray;
+}
+
+.sectionTitle {
+  margin: 8px -8px;
+  padding: 0 8px;
+}
+
+.componentSection h4 {
+  margin-top: 0;
+  color: darkgray;
+  font-size: 14px;
+}
+
+.componentSection p {
+  margin: 0;
+}
+
+.componentSection.active input {
+  border-bottom-color: darkgray;
+}
+
+.componentSection.active h4 {
+  color: black;
+}
+
+.componentSection.checkbox {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+}
+
+.componentSection.checkbox h4 {
+  flex: 3;
+  margin: 8px 0;
+  flex-grow: 10;
+}
+.componentSection.checkbox input {
+  flex: 1;
+  position: relative;
+}
+.componentSection.checkbox input:after {
+  content: '';
+  width: 16px;
+  height: 16px;
+  background: #cc0000;
+  position: absolute;
+  display: block;
+  top: -2px;
+  left: -3px;
+  border-radius: 100%;
+}
+.componentSection.checkbox input:before {
+  content: '';
+  width: 20px;
+  height: 20px;
+  border: 3px solid #cc0000;
+  position: absolute;
+  display: block;
+  top: -7px;
+  right: 11px;
+  border-radius: 100%;
+}
+
+/* janky but you do what you gotta do */
+
+.modal > div > div {
+  left: 25% !important;
+}
+
+.modal > div > div > div:last-child {
+  background-color: rgba(0, 0, 0, 0.3) !important;
 }
