--- a/src/index.css
+++ b/src/index.css
@@ -46,10 +46,10 @@ code {
 
 .app {
   flex: 2;
-  width: 360px;
-  height: 712px;
-  max-width: 360px;
-  max-height: 712px;
+  width: 400px;
+  height: 760px;
+  max-width: 400px;
+  max-height: 760px;
   overflow-y: scroll;
   -webkit-overflow-scrolling: 'touch';
   border: 20px solid black;
@@ -355,4 +355,33 @@ code {
 
 .modal > div > div > div:last-child {
   background-color: rgba(0, 0, 0, 0.3) !important;
+}
+
+.carousel .control-dots .dot {
+  background: black;
+}
+
+.carousel .carousel-status {
+  color: black;
+  text-shadow: none;
+  font-size: 16px;
+  right: 28px;
+  top: 5px;
+}
+
+.carousel.carousel-slider .control-arrow {
+  color: black;
+}
+
+.carousel .control-arrow:before {
+  border-right-color: black !important;
+  border-left-color: black !important;
+}
+
+.carousel .slide {
+  background: transparent;
+}
+
+.carousel .control-dots {
+  padding: 0;
 }
