--- a/src/pages/LandingPage/LandingPage.module.css
+++ b/src/pages/LandingPage/LandingPage.module.css
@@ -1,5 +1,5 @@
 .landingContainer {
-  max-width: 1500px;
+  max-width: 1300px;
   margin-left: auto;
   margin-right: auto;
 }
@@ -44,15 +44,29 @@
   color: rgb(51, 51, 51);
 }
 
+.textBlockDark {
+  background-color: rgb(26, 26, 26);
+}
+
+.textBlockDark h2,
+.textBlockDark p,
+.textBlockDark a {
+  color: white;
+}
+
 .centerInfo {
-  position: relative;
+  position: absolute;
   top: 50%;
   left: 50%;
   transform: translateY(-50%) translateX(-50%);
-  max-width: 500px;
-  background: rgba(0, 0, 0, 0.65);
-  padding: 16px;
   border-radius: 4px;
+}
+
+.center {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
 .centerInfo * {
@@ -83,6 +97,121 @@
   max-width: 800px;
 }
 
+.links {
+  margin-top: 16px;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.links a {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  flex-grow: 1;
+  padding: 12px;
+  text-decoration: none;
+  color: rgb(51, 51, 51);
+  transition: background-color 0.4s cubic-bezier(0.15, 0.9, 0.34, 0.95);
+  text-align: center;
+}
+
+.links img {
+  max-height: 80px;
+  margin-bottom: 8px;
+}
+
+.links a:hover {
+  background-color: rgba(204, 0, 0, 0.4);
+}
+
+.team {
+  margin-top: 16px;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  flex-wrap: wrap;
+}
+
+.team a {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  flex-grow: 1;
+  padding: 12px;
+  font-size: 20px;
+  text-decoration: none;
+  transition: background-color 0.4s cubic-bezier(0.15, 0.9, 0.34, 0.95);
+}
+
+.team a:nth-child(2n) {
+  page-break-after: always; /* CSS 2.1 syntax */
+  break-after: always; /* New syntax */
+}
+
+.team img {
+  max-height: 300px;
+  margin-right: 8px;
+  margin-bottom: 8px;
+}
+
+.team a:hover {
+  background-color: rgba(255, 255, 255, 0.4);
+}
+
+.middleImg {
+  width: 100vw;
+  max-width: 100%;
+}
+
+.buttonsContainer {
+  display: flex;
+  flex-direction: row;
+}
+
+.button {
+  padding: 10px 20px;
+  padding-right: 40px;
+  background-color: #cc0000;
+  margin-top: 16px;
+  color: #ffffff;
+  text-decoration: none;
+  transition: background-color 0.4s cubic-bezier(0.15, 0.9, 0.34, 0.95);
+  position: relative;
+  margin-right: 16px;
+  border-radius: 4px;
+}
+
+.buttonUnrounded {
+  border-radius: 0px;
+}
+
+.hiddenButton {
+  background-color: white;
+}
+
+.button:hover {
+  background-color: black;
+  color: #ffffff;
+  text-decoration: none;
+}
+
+.icon {
+  top: 50%;
+  transform: translateY(-50%);
+  right: 12px;
+  position: absolute;
+  transition: right 0.4s cubic-bezier(0.15, 0.9, 0.34, 0.95);
+}
+
+.button:hover .icon {
+  right: 6px;
+}
+
 @media (min-width: 900px) {
   .textBlock {
     padding-left: 86px;
@@ -102,10 +231,22 @@
   }
 }
 
+@media (max-width: 870px) {
+  .team a {
+    flex-basis: 50%;
+  } /* forces two items to a line */
+}
+
 @media (max-width: 768px) {
   .newLocationText {
     padding: 10px;
     max-width: 100%;
     font-size: 48px;
+  }
+}
+
+@media (max-width: 600px) {
+  .links {
+    flex-wrap: wrap;
   }
 }
