final changes to get site ready for initial deployment

--- a/src/components/IconModal/IconModal.module.css
+++ b/src/components/IconModal/IconModal.module.css
@@ -17,6 +17,8 @@
 .modalIconBox {
   display: flex;
   flex-direction: column; 
+  justify-content: center;
+  align-items: center; 
 }
 
 .modalEnter {
