--- a/src/pages/HomePage/HomePage.module.css
+++ b/src/pages/HomePage/HomePage.module.css
@@ -13,6 +13,7 @@
 }
 
 .sectionLink {
+  position: relative;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -32,8 +33,25 @@
   background-color: rgba(60, 60, 60, 0.1);
   transition: background-color 0.4s cubic-bezier(0.15, 0.9, 0.34, 0.95);
 }
+.sectionLink.withIcon {
+  padding-right: 40px;
+  padding-left: 40px;
+}
 .sectionLink.large {
   min-height: 250px;
+}
+
+.sectionLink .sectionLinkIcon {
+  position: absolute;
+  right: 12px;
+  padding: 2px;
+  border-radius: 4px;
+  transition: background-color 0.4s cubic-bezier(0.15, 0.9, 0.34, 0.95);
+}
+.sectionLink .sectionLinkIcon:hover {
+  position: absolute;
+  right: 12px;
+  background-color: rgba(225, 225, 225, 0.8);
 }
 
 .sectionLink:hover {
@@ -51,4 +69,11 @@
   .sectionLink {
     flex-basis: 50%;
   } /* forces two items to a line */
+}
+
+@media (max-width: 500px) {
+  .sectionLink {
+    width: 100%;
+    max-width: 100%;
+  } /* forces each item to a line */
 }
